Fredag Förmiddag, 32 channels. Loss = 0.09

--- a/VAE.ipynb
+++ b/VAE.ipynb
@@ -18,14 +18,13 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "import librosa\n",
     "import torchaudio\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchaudio.transforms import Resample\n",
     "\n",
     "import time\n",
     "\n",
-    "device = 'mps' if torch.backends.mps.is_available() else 'cpu'\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(device)\n",
     "\n",
     "## FÖR ATT ÅTERSKAPA: test_output = Resample(resample_rate,48000)(next(iter(dataset)))\n",
@@ -49,16 +48,20 @@
     "        return waveform\n",
     "\n",
     "\n",
-    "# Create a DataLoader for your dataset\n",
-    "# You need to replace 'file_paths' with the actual paths to your MP3 files\n",
-    "data_dir = \"./output_chunks/\"\n",
-    "file_paths = [f for f in os.listdir(data_dir) if f.endswith(\".mp3\")]\n",
-    "file_paths = [os.path.join(data_dir, x) for x in file_paths]\n",
+    "train_dir = \"./train_data/\"\n",
+    "train_paths = [f for f in os.listdir(train_dir) if f.endswith(\".mp3\")]\n",
+    "train_paths = [os.path.join(train_dir, x) for x in train_paths]\n",
+    "\n",
+    "val_dir = \"./val_data/\"\n",
+    "val_paths = [f for f in os.listdir(val_dir) if f.endswith(\".mp3\")]\n",
+    "val_paths = [os.path.join(val_dir, x) for x in val_paths]\n",
+    "\n",
     "\n",
     "resample_rate = 8000\n",
-    "dataset = MP3Dataset(file_paths,resample_rate)\n",
-    "\n",
-    "dataloader = DataLoader(dataset, batch_size=64, shuffle=True)\n",
+    "train_dataset = MP3Dataset(train_paths,resample_rate)\n",
+    "val_dataset = MP3Dataset(val_paths,resample_rate)\n",
+    "train = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "val = DataLoader(val_dataset, batch_size = 32, shuffle = True)\n",
     "\n",
     "\n"
    ]
@@ -78,7 +81,7 @@
    ],
    "source": [
     "torchaudio.load('./output_chunks/chunk_1.mp3')\n",
-    "print(torchaudio.info('./output_chunks/chunk_1.mp3'))"
+    "print(torchaudio.info('./output_chunks/chunk_1.mp3'))cd"
    ]
   },
   {
@@ -176,7 +179,7 @@
     "\n",
     "        self.input_size = input_size\n",
     "        \n",
-    "        channels = 16\n",
+    "        channels = 32\n",
     "        self.encoder = nn.Sequential(\n",
     "            nn.Conv1d(2, channels, kernel_size=3, stride=1, padding=0),\n",
     "            nn.BatchNorm1d(channels),\n",
@@ -292,7 +295,7 @@
     "vae.to(device)\n",
     "\n",
     "# Define the optimizer\n",
-    "optimizer = optim.Adam(vae.parameters(), lr=1e-5) # 1e-5 seems good\n",
+    "optimizer = optim.Adam(vae.parameters(), lr=2e-5) # 1e-5 seems good\n",
     "VAEloss = loss_function()\n",
     "\n",
     "\n",
@@ -501,29 +504,58 @@
     "print(next(vae.parameters()).device)\n",
     "vae.to(device)\n",
     "print(next(vae.parameters()).device)\n",
-    "n_epochs = 1000\n",
-    "\n",
-    "train = dataloader\n",
-    "n_batches = len(train)\n",
     "\n",
     "\n",
+    "\n",
+    "train_loss = []\n",
     "recon_loss = []\n",
     "KLD_loss = []\n",
+    "\n",
+    "val_loss = []\n",
+    "val_recon_loss = []\n",
+    "val_KLD_loss = []\n",
+    "\n",
+    "n_epochs = 1000\n",
+    "start_time = time.time()\n",
     "for epoch in range(n_epochs):\n",
     "    print(f\"epoch: {epoch}\")\n",
-    "    for current_batch in range(n_batches):\n",
-    "        \n",
-    "        batch = next(iter(train))\n",
+    "    for batch in train:\n",
+    "        batch.to(device)\n",
     "        decoded, mu, logvar = vae(batch)\n",
     "        \n",
     "        losses = VAEloss(decoded,batch,mu,logvar)\n",
+    "        #losses = VAEloss(decoded.to(device), batch.to(device), mu.to(device), logvar.to(device))\n",
+    "\n",
     "        loss = losses[0]\n",
+    "        \n",
+    "        train_loss.append(loss.detach().to('cpu'))\n",
     "        recon_loss.append(losses[1])\n",
     "        KLD_loss.append(losses[2])\n",
+    "        \n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        optimizer.zero_grad()\n",
     "        print(\"loss: \", loss.item())\n",
+    "    \n",
+    "    if epoch % 5 == 0:\n",
+    "        for batch in val:\n",
+    "            vae.eval()\n",
+    "            \n",
+    "            batch.to(device)\n",
+    "            decoded, mu, logvar = vae(batch)\n",
+    "            \n",
+    "            losses = VAEloss(decoded,batch,mu,logvar)\n",
+    "            loss = losses[0]\n",
+    "            \n",
+    "            val_loss.append(loss.detach().to('cpu'))\n",
+    "            val_recon_loss.append(losses[1])\n",
+    "            val_KLD_loss.append(losses[2])\n",
+    "            \n",
+    "            vae.train()\n",
+    "        \n",
+    "        \n",
+    "        print(f\"### Val loss: {val_loss[int(epoch/5)]}\")    \n",
+    "        print(f\"### Time since start: {time.time() - start_time}\\t Time per epoch: {(time.time()-start_time)/(epoch +1)}\")\n",
     "    "
    ]
   },
